# test-django-app

./: Procfile  db.sqlite3  pyproject.toml  requirements.txt
pantryPalBackendTest/: asgi.py  manage.py  settings.py  urls.py  wsgi.py
